--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "build": "npm install",
-  "start": "node http_server_js",
+  "start": "node http_server.js",
   "engines": {
     "node": "14.x"
   },
