--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "little tiers",
   "main": "http_server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install",
+    "start": "node http_server.js"
   },
-  "build": "npm install",
-  "start": "node http_server.js",
   "engines": {
     "node": "14.x"
   },
